--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,32 @@
 .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
   height: 100vh;
   height: 100dvh;
   background-color: #272727;
+
+}
+
+.calculatorContainer {
+  border: 2px solid white;
+  border-radius: 1.5rem;
+
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.output,
+.output:disabled {
+  width: 100%;
+  padding: 1rem 2rem;
+  background: none;
+  border: 2px solid white;
+  border-radius: 1rem;
+  text-align: right;
 }
