--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,21 @@
 *::before,
 *::after {
   box-sizing: border-box;
+
   margin: 0;
   padding: 0;
 }
 
 button {
+  cursor: pointer;
+
+  padding: 1rem 2rem;
+
   background-color: #272727;
+
+  font-size: 2rem;
   color: white;
+
   border: 2px solid white;
+  border-radius: 1rem;
 }
