equal and clear works

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -27,6 +27,7 @@
   padding: 1rem 2rem;
   background: none;
   border: 2px solid white;
+  color: white;
   border-radius: 1rem;
   text-align: right;
 }
