--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,13 @@
 *::before,
 *::after {
   box-sizing: border-box;
-
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #272727;
 }
 
 button {
